[tool.poetry]
name = "docker-composer"
version = "0.8.0"
description = "Use docker-compose from within Python"
authors = ["Micha <mschoell@gmx.com>"]
license = "Apache-2.0"
packages = [
    { include = "docker_composer", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.8"
attrs = "^20.3.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
addopts = "-ra --black"

[tool.black]
line-length = 88
target-version = ['py37']

[tool.isort]
sections = ['FUTURE', 'PYTEST', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
known_pytest = ['pytest']
multi_line_output = 3
line_length = 88
include_trailing_comma = 'True'


